--- a/templates/hello.html
+++ b/templates/hello.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <title>Hello from Rotor planet!</title>
-<body style="background: black; background: url(img/{{ rocket }}.jpg) no-repeat center center fixed;
+<body style="background: black; background: url(/static/img/{{ rocket }}.jpg) no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
