--- a/templates/hello.html
+++ b/templates/hello.html
@@ -10,9 +10,13 @@
     height: 90px;
     vertical-align:  middle;">
 {% if name %}
-  <h1>Hello from {{ name }}!</h1>
+  <h1>На связи узел: {{ name }}!</h1>
 {% else %}
-  <h1>Rocket is ready, Commander! Its a {{ rocket }} size!</h1>
+  <h1>Рокета готова, коммандир!! Это размер: {{ rocket }}!</h1>
+{% endif %}
+
+{% if version %}
+  <h1>Версия приложения: {{ version }}!</h1>
 {% endif %}
 
   {% if contents %}
