change template for lab

--- a/templates/hello.html
+++ b/templates/hello.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<title>Hello from Rotor planet!</title>
+<title>Привет с планеты Rotoro!</title>
 <body style="background: black; background: url(/static/img/{{ rocket }}.jpg) no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -10,13 +10,13 @@
     height: 90px;
     vertical-align:  middle;">
 {% if name %}
-  <h1>На связи узел: {{ name }}!</h1>
-{% else %}
-  <h1>Рокета готова, коммандир!! Это размер: {{ rocket }}!</h1>
+  <h1>На связи узел: <b style="color:red">{{ name }}</b>!</h1>
+  <h1>Ракета готова, коммандир!!</h1> 
+  <h1>Её размер: <b style="color:yellow">{{ rocket }}</b>.</h1>
 {% endif %}
 
 {% if version %}
-  <h1>Версия приложения: {{ version }}!</h1>
+  <h1>Версия приложения: <b style="color:green">{{ version }}</b>.</h1>
 {% endif %}
 
   {% if contents %}
@@ -24,5 +24,7 @@
     {{ contents }}
   </textarea>
   {% endif %}
+
+  <h1>Связь завершена.</h1>
 
 </div>
