Update hello.html - typo fixed

--- a/templates/hello.html
+++ b/templates/hello.html
@@ -11,7 +11,7 @@
     vertical-align:  middle;">
 {% if name %}
   <h1>На связи узел: <b style="color:red">{{ name }}</b>!</h1>
-  <h1>Ракета готова, коммандир!!</h1> 
+  <h1>Ракета готова, командир!!</h1> 
   <h1>Её размер: <b style="color:yellow">{{ rocket }}</b>.</h1>
 {% endif %}
 
